--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -49,9 +49,9 @@
                   {{ end }}
                   <div class="excerpt-container">
                      <div class="excerpt-meta">
-                        <span class="date">{{ .Date.Format "02 January" }}</span>	<span> / </span>
+                        <span class="date">{{ .Date.Format "02 January" }}</span>	<span>  </span>
                         {{ if and (isset .Site.Params "author") .Site.Params.author }}
-                        <span class="author">
+                        <span class="author">/
                         {{ if and (isset .Site.Params "authorlink") .Site.Params.authorLink }}
                         <a href="{{ .Site.Params.authorLink | default "" | absURL }}" title="Posts by {{ .Site.Params.author | default "" }}" rel="author">{{ .Site.Params.author  | default "" }}</a>
                         {{ else }}
