--- a/layouts/faq/list.html
+++ b/layouts/faq/list.html
@@ -1,11 +1,11 @@
 {{ define "main"}}
 
 <section id="features" class="features section padding-bottom">
-    <div class="container">
+    <div class="container page-background" >
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <h1 class="title">FAQ</h1>
-                <div class="content">
+                <div class="content faq">
                     {{.Content}}
                 </div>
             </div>
