--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -538,6 +538,13 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     line-height: 1.5em;
 }
 
+.faq p{
+    padding-left: 20px !important;
+}
+
+.faq pre{
+    margin-left: 20px !important;
+}
 .nopadding {
     padding: 0 !important;
     margin: 0 !important;
