--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -51,6 +51,11 @@ a:hover {
   font-size: 18px;
 }
 
+.page-background{
+  background-color: white;
+  padding: 20px
+}
+
 .btn-theme {
   background: #E19C14;
   border: 1px solid #E19C14;
@@ -718,9 +723,9 @@ blockquote {
   margin-top: 50px;
 }
 /* ======= FAQ Section ======= */
-.faq {
+./*faq {
   padding: 80px 0;
-}
+}*/
 
 .faq.grey {
   background-color: #f5f5f5;
@@ -952,7 +957,7 @@ svg{
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) {
   #features .row {
-    margin-top: 100px;
+    margin-top: 50px;
   }
 
   .cover-image {
